--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "node-geocoder": "^3.25.0",
         "nodemailer": "^6.4.2",
         "slugify": "^1.3.6",
-        "xss-clean": "^0.1.1"
+        "xss-clean": "^0.1.1",
+        "yargs": "^15.0.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.1"
